k8s/overlays/dev/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-rox
spec:
  selector:
    app: nginx-proxy-rox
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: LoadBalancer
